; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_dp_backing_file.c_macx_backing_store_compaction.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_dp_backing_file.c_macx_backing_store_compaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWAP_COMPACT_DISABLE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@compressor_store_stop_compaction = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"compressor_store_stop_compaction = TRUE\0A\00", align 1
@SWAP_COMPACT_ENABLE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [42 x i8] c"compressor_store_stop_compaction = FALSE\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @macx_backing_store_compaction(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = call i32 (...) @kauth_cred_get()
  %6 = call i32 @suser(i32 %5, i32 0)
  store i32 %6, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* %4, align 4
  store i32 %9, i32* %2, align 4
  br label %28

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @SWAP_COMPACT_DISABLE, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* @compressor_store_stop_compaction, align 4
  %17 = call i32 @kprintf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %27

18:                                               ; preds = %10
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @SWAP_COMPACT_ENABLE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i32, i32* @FALSE, align 4
  store i32 %24, i32* @compressor_store_stop_compaction, align 4
  %25 = call i32 @kprintf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  br label %26

26:                                               ; preds = %23, %18
  br label %27

27:                                               ; preds = %26, %15
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %8
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @suser(i32, i32) #1

declare dso_local i32 @kauth_cred_get(...) #1

declare dso_local i32 @kprintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
